# Fusion-MCP

./: .gitignore  LICENSE  README.md  SETUP.md  mcp_config.json  pyproject.toml
api/: __init__.py  main.py  mcp_manager.py  openai_handler.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ChatInterface.tsx  ServerSidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
